# web3-input-decoder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml
tests/: test_decode.py  test_decode_constructor.py  test_decode_error.py  test_decode_function.py  test_performance.py  test_utils.py
tests/data/: __init__.py  caller.py  defi.py  example.py  nft.py  storage.py  tether.py
web3_input_decoder/: __init__.py  decoder.py  exceptions.py  types.py  utils.py
web3_input_decoder/utils/: __init__.py  hex.py  parse.py
