[tool.poetry]
name = "web3-input-decoder"
version = "0.1.13"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "A simple offline web3 transaction input decoder for functions and constructors"
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kigawas/web3-input-decoder"
# tags
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
]
keywords = [
  "ethereum",
  "web3",
]
# package data: PEP-561
include = ["web3_input_decoder/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

# 3rd party
eth-abi = "^5.1.0"
eth-utils = ">=2.0.0"
pycryptodome = "^3.18.0"

[tool.poetry.group.dev.dependencies]
ipython = {version = "8.26.0", python = "^3.10"}
mypy = "^1.11"
ruff = "^0.6.0"

# stubs
eth-typing = "^5.0.0"

[tool.poetry.group.test.dependencies]
pyinstrument = "^4.5.0"
pytest = "^8.1.0"
pytest-cov = "^5.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
