[tool.poetry]
name = "web3-input-decoder"
version = "0.1.14"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "A simple offline web3 transaction input decoder for functions and constructors"
license = "MIT"
maintainers = ["Weiliang Li <to.be.impressive@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kigawas/web3-input-decoder"
# tags
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
]
keywords = [
  "ethereum",
  "web3",
]
# package data: PEP-561
include = ["web3_input_decoder/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

# 3rd party
eth-abi = "^5.0.1"
eth-utils = ">=2.0.0"
pycryptodome = ">=3.18.0"

[tool.poetry.group.dev.dependencies]
ipython = {version = "9.4.0", python = "^3.11"}
mypy = {version = "^1.17.0", python = "^3.9"}
ruff = "^0.12.4"

# stubs
eth-typing = "^5.2.1"

[tool.poetry.group.test.dependencies]
pyinstrument = "^5.0.3"
pytest = {version = "^8.4.1", python = "^3.9"}
pytest-cov = {version = "6.2.1", python = "^3.9"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--cov=web3_input_decoder"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@abstract",
  "raise NotImplementedError",
  "if __name__ == .__main__.",
]
